@@ -1,13 +1,9 @@
 package com.github.scribejava.apis.microsoftazureactivedirectory;
 
-import com.github.scribejava.core.model.OAuthRequest;
-import com.github.scribejava.core.oauth2.bearersignature.BearerSignatureAuthorizationRequestHeaderField;
-
-public class MicrosoftAzureActiveDirectoryBearerSignature extends BearerSignatureAuthorizationRequestHeaderField {
-    private static final String ACCEPTED_FORMAT
-            = "application/json; odata=minimalmetadata; streaming=true; charset=utf-8";
+public class MicrosoftAzureActiveDirectoryBearerSignature extends BaseMicrosoftAzureActiveDirectoryBearerSignature {
 
     protected MicrosoftAzureActiveDirectoryBearerSignature() {
+        super("application/json; odata=minimalmetadata; streaming=true; charset=utf-8");
     }
 
     private static class InstanceHolder {
@@ -18,11 +14,5 @@ public class MicrosoftAzureActiveDirectoryBearerSignature extends BearerSignatur
 
     public static MicrosoftAzureActiveDirectoryBearerSignature instance() {
         return InstanceHolder.INSTANCE;
-    }
-
-    @Override
-    public void signRequest(String accessToken, OAuthRequest request) {
-        super.signRequest(accessToken, request);
-        request.addHeader("Accept", ACCEPTED_FORMAT);
     }
 }
