@@ -1,3 +1,6 @@
+[SNAPSHOT]
+ * add new API Microsoft Azure Active Directory (Azure AD) 2.0 (thanks to https://github.com/rzukow and https://github.com/dgrudenic)
+
 [6.1.0]
  * add new API Keycloak (https://www.keycloak.org/) (thanks to https://github.com/JureZelic)
  * add new API Discord (https://discordapp.com/) (thanks to https://github.com/Jokuni)
